test/parse/module/bad-import-func-not-result.txt
;;; ERROR: 1
(module (import "foo" "bar" (func (param i32) (resalt i32))))
(;; STDERR ;;;
parse/module/bad-import-func-not-result.txt:2:48: unexpected token "resalt"
(module (import "foo" "bar" (func (param i32) (resalt i32))))
                                               ^^^^^^
parse/module/bad-import-func-not-result.txt:2:55: syntax error, unexpected VALUE_TYPE, expecting RESULT
(module (import "foo" "bar" (func (param i32) (resalt i32))))
                                                      ^^^
;;; STDERR ;;)
